# genai-learning-journey

./: .gitignore  README.md  faiss_index.py  pyproject.toml
day-01-prompt-engineering/: summarize_news.py
day-02-streaming/: chat_stream.py
day-03-function-calling/: tool_agent.py
day-04-embeddings/: semantic_search.py
day-05-faiss/: documents.pkl  faiss_index.py
day-06-rag/: rag_pipeline.py
day-07-evaluation/: manual_evaluate.py
day-08-langgraph/: agent_graph.py
day-09-checkpoints/: agent_with_memory.py
day-10-human-in-loop/: agent_with_approval.py
day-11-multi-agent/: supervisor_agent.py
day-12-observability/: supervisor_final.py  supervisor_working.py
day-13-optimisation/: optimised_agent.py
