[project]
name = "genai-learning-journey"
version = "0.1.0"
description = ""
authors = [
    {name = "pallavi-dhadage",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "openai (>=2.45.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "groq (>=1.5.0,<2.0.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
